refactor: use getFirst/getLast